# GrowmindAI

./: .gitignore  ADDON_CONVERSION_SUMMARY.md  ADDON_REPOSITORY_SETUP.md  AUDIT_QUICK_REFERENCE.md  CHANGES_MADE.md  CODE_AUDIT_SUMMARY.md  CODE_CHANGES_SUMMARY.md  CODE_REVIEW.md  CODE_REVIEW_2.md  CODE_REVIEW_3.md  CODE_REVIEW_ACTION_ITEMS.md  CODE_REVIEW_FINAL_SUMMARY.md  CODE_REVIEW_INDEX.md  COMPREHENSIVE_AUDIT_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONVERSION_COMPLETE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_AUDIT_AND_CODE_QUALITY_REPORT.md  FINAL_AUDIT_REPORT.md  FINAL_STATUS_REPORT.md  FIXES_GUIDE.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_ADDON_SETUP.md  REVIEW_INDEX.md  SECURITY_REPORT.md  addons.json  analyzer_script.py  build.yaml  config.yaml  google_genai-0.3.0-py3-none-any.whl  mapping.json  repository.json  run.sh
backend/: nutrient_engine.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  ai_routes.py  database.py  enums.py  inventory_db.py  journal_routes.py  logging_config.py  main.py  nutrient_routes.py  operations_routes.py  plan_routes.py  sanitization.py  storage.py  telemetry.py  telemetry_routes.py  timeseries_routes.py  utils.py  websocket_routes.py
backend/cultivation_os_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/services/: nutrient_service.py
backend/tests/: test_backend.py  test_comprehensive.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+136 files in other folders)
