[project]
name = "cultivation-os-backend"
version = "0.1.0"
description = "FastAPI bridge between Cultivation OS frontend and Home Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "httpx>=0.26.0,<0.27.0",
    "portalocker>=2.8.0,<3.0.0",
    "google-genai>=0.3.0,<0.4.0",
    "pydantic>=2.0.0,<2.1.0"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = false
