[project]
name = "cultivation-os-backend"
version = "0.1.0"
description = "FastAPI bridge between Cultivation OS frontend and Home Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.28.0",
    "portalocker>=2.8.0",
    "google-genai>=1.62.0",
    "pydantic>=2.9.0",
    "websockets>=13.0"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = false
